--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
 
 <script>
-  const API_KEY = "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"; // ⚠️ apna key
+  const API_KEY = "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"; 
   const API_URL = "https://api.groq.com/openai/v1/chat/completions";
   const chatEl = document.getElementById("chat");
   const inputEl = document.getElementById("input");
@@ -73,19 +73,22 @@
     const text=inputEl.value.trim(); if(!text) return;
     addBubble("user",text); inputEl.value="";
 
-    // 👇 Custom rule check
-    const lower=text.toLowerCase();
-    if(lower.includes("kisne banaya") || lower.includes("owner") || lower.includes("develop")){
-      addBubble("bot","Mujhe Nedits Edition ki team ne banaya hai.");
-      return;
-    }
-
     const typing=addTyping();
     try{
       const res=await fetch(API_URL,{
         method:"POST",
         headers:{"Authorization":"Bearer "+API_KEY,"Content-Type":"application/json"},
-        body:JSON.stringify({model:"llama-3.1-8b-instant",messages:[{role:"user",content:text}],stream:false})
+        body:JSON.stringify({
+          model:"llama-3.1-8b-instant",
+          messages:[
+            {
+              role:"system",
+              content:"Tum Nedits AI ho. Agar koi tumse specifically Nedits AI ke owner ya developer ke baare me puchhe, to hamesha bolo: 'Nedits Edition ka owner Nishit hai aur isse puri team ne milke banaya hai.'"
+            },
+            {role:"user",content:text}
+          ],
+          stream:false
+        })
       });
       const data=await res.json();
       typing.remove();
